Decommissioned Calendar and updated mailer service

--- a/Sync/src/app/portal/nav/nav.component.html
+++ b/Sync/src/app/portal/nav/nav.component.html
@@ -6,7 +6,7 @@
   <mat-tab label="SCHEDULE" *ngIf="user?.role === 'Manager' || user?.role === 'DJ'"><app-schedule></app-schedule></mat-tab>
   <mat-tab label="DJ AVAILABILITY" *ngIf="user?.role === 'Manager'"><view-avail></view-avail></mat-tab>
   <mat-tab label="AVAILABILITY" *ngIf="user?.role === 'DJ'"><app-availabilty></app-availabilty> </mat-tab>
-  <mat-tab label="CALENDAR" *ngIf="user?.role === 'Manager'|| user?.role === 'DJ'"><app-sync-calendar></app-sync-calendar> </mat-tab>
+  <!--<mat-tab label="CALENDAR" *ngIf="user?.role === 'Manager'|| user?.role === 'DJ'"><app-sync-calendar></app-sync-calendar> </mat-tab>-->
   <mat-tab label="VENUES" *ngIf="user?.role === 'Admin' || user?.role ==='Manager'"><app-venue-data></app-venue-data> </mat-tab>
   <mat-tab label="EMPLOYEES" *ngIf="user?.role === 'Manager'"><app-djs></app-djs> </mat-tab>
   <mat-tab label="SHIFTS" *ngIf="user?.role === 'Admin'"><app-shifts></app-shifts></mat-tab>
