--- a/Sync/src/app/dialogs/edit-user/edit-user.component.html
+++ b/Sync/src/app/dialogs/edit-user/edit-user.component.html
@@ -1,4 +1,4 @@
-<form (submit)="onEditSubmit()" class="example-form" fxLayout="column"  fxLayoutGap="20px">
+<form  class="example-form" fxLayout="column"  fxLayoutGap="20px">
   <h1 mat-dialog-title>Edit User</h1>
   <mat-dialog-content fxLayout="column" fxLayoutAlign="center">
     <mat-form-field class="example-full-width">
