--- a/Sync/src/app/navbar/navbar.component.html
+++ b/Sync/src/app/navbar/navbar.component.html
@@ -31,6 +31,6 @@
   </button>
   <button mat-menu-item routerLink="../help">
     <mat-icon>help</mat-icon>
-    <span routerLink="help">help</span>
+    <button mat-button routerLink="help">help</button>
   </button>
 </mat-menu>
