--- a/Sync/src/app/portal/shifts/shifts.component.html
+++ b/Sync/src/app/portal/shifts/shifts.component.html
@@ -66,9 +66,8 @@
     </mat-table>
     <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
   </div>
-  <div>
-    <br />
-    <button mat-raised-button (click)="sendSchedule(user)">Send Email Notifications</button>
+  <div *ngIf="user?.role === 'Manager'">
+    <button mat-raised-button (click)="sendSchedule()">Send Email Notifications</button>
   </div>
 </div>
 
